--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,13 +1,14 @@
 :root {
   --color-primary: rgb(28, 40, 59);
   --color-navigation: rgb(249, 250, 251);
-  --color-background: #e6e6e8;
+  --color-background: rgb(101, 110, 131);
   --color-accent: rgb(29, 78, 216);
   --color-date: rgb(107, 114, 128);
   --color-background-input: rgb(239, 242, 249);
   --color-placeholder: rgb(159, 166, 187);
-  --color-accent: rgb(25, 143, 240); /* #198ff0 */
-  --color-preview-background: rgb(101, 110, 131);
+  --color-accent: rgb(100, 149, 237);
+  --color-preview-background: rgb(25, 25, 112);
+  --border-color: rgba(0, 0, 0, 0.15);
 }
 
 html {
@@ -16,8 +17,178 @@ html {
   scroll-behavior: smooth;
 }
 
+.range-container {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.input-range-label {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--color-primary);
+  margin-bottom: 1rem;
+}
+
+input[type="range"] {
+  width: 100%;
+  height: 10px;
+  border-radius: 0.25rem;
+}
+
+.range-slider {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: var(--color-background);
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.accent {
+  color: var(--color-accent);
+}
+
+.bg-accent {
+  background-color: var(--color-accent);
+}
+
+.level-label {
+  position: relative;
+  color: var(--color-noskill);
+  height: auto;
+  width: auto;
+  cursor: pointer;
+}
+
+button {
+  background-color: #0a6bff;
+  border-radius: 4px;
+  border: 0;
+  box-shadow: rgba(1, 60, 136, 0.5) 0 -1px 3px 0 inset, rgba(0, 44, 97, 0.1) 0 3px 6px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inherit;
+  font-family: "Space Grotesk", -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  margin: 0;
+  min-height: 56px;
+  min-width: 120px;
+  padding: 16px 20px;
+  position: relative;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  transition: all 0.2s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+
+button:hover {
+  background-color: #065dd8;
+  transform: translateY(-2px);
+}
+
+.bordered-container {
+  border: 1px solid var(--border-color);
+  border-radius: 0.25rem;
+  padding: 1rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.block {
+  display: block;
+}
+
+.chevron {
+  margin-left: 0.5rem;
+  height: 24px;
+  width: 24px;
+  transition: all 0.1s ease-in-out;
+}
+.chevron-open {
+  transform: rotate(180deg);
+}
+
+.chevron-closed {
+  transform: rotate(0deg);
+}
+
+.level-selected:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.level-container {
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+
+  max-height: 36px;
+  height: 100%;
+  max-width: 220px;
+  min-height: 20px;
+  border-radius: 0.25rem;
+  overflow: hidden;
+  border: 1px solid var(--color-navigation);
+
+  margin-left: auto;
+  margin-right: auto;
+  user-select: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+input:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.container {
+  position: relative;
+  margin: 0 auto;
+  padding: 0 0rem;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.form-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: var(--color-background);
+}
+
+.preview-container {
+  background-color: var(--color-preview-background);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
-  /* background-color: var(--color-background); */
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: normal;
@@ -29,27 +200,17 @@ body {
   font-weight: 400;
 }
 
+.progresss {
+  position: relative;
+  background-color: black;
+  width: 100%;
+  height: 8px;
+  border-radius: 0.5rem;
+}
+
 a {
   text-decoration: none;
   color: inherit;
-}
-
-.add-container {
-  font-size: 16px;
-  line-height: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  position: relative;
-  padding: 6px 14px;
-  width: 100%;
-  border-radius: 4px;
-  background-color: rgba(234, 246, 255, 0);
-  color: rgb(26, 145, 240);
-  font-weight: 600;
-  cursor: pointer;
-  outline: currentcolor none medium;
-  transition: background-color 0.15s ease 0s;
 }
 
 input {
@@ -63,7 +224,6 @@ input {
   border: 0px none;
   color: rgb(30, 37, 50);
   transition: all 0.1s ease 0s;
-  /* background-color: var(--color-background-input); */
 }
 
 .flex {
@@ -82,25 +242,25 @@ input:focus {
   right: 0px;
   width: 100%;
   height: 2px;
-  background-color: #1a91f0;
+  background-color: var(--color-accent);
   border-radius: 0px 0px 2px 2px;
   pointer-events: none;
   opacity: 0;
   transform: scaleX(0.5);
+  transition: all 0.2s ease 0s;
 }
+
 input:focus-within + .input-border {
   opacity: 1;
   transform: scaleX(1);
 }
 
-/* make plaecholder */
 input::placeholder {
   color: var(--color-placeholder);
 }
 
 .input-label {
   display: flex;
-  align-items: center;
   font-size: 16px;
   line-height: 20px;
   color: rgb(130, 139, 162);
@@ -109,14 +269,6 @@ input::placeholder {
 
 .pointer {
   cursor: pointer;
-}
-
-.link {
-  border-bottom: 1px dashed #333;
-}
-.link:hover {
-  color: var(--color-accent) !important;
-  fill: var(--color-accent) !important;
 }
 
 .header {
@@ -325,6 +477,5 @@ input::placeholder {
   width: 20px;
   margin-right: 0.25rem;
   height: 20px;
-  /* font-weight: 800;
-  /* fill: var(--color-primary); */
+  font-weight: 800;
 }
