--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,23 +24,34 @@ input[type="file"] {
 }
 
 .dropzone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border: 2px dashed var(--border-color);
   border-radius: 5px;
+  width: auto;
   background: var(--color-navigation);
-  min-height: 3rem;
-  min-width: 8rem;
+  margin: 0.5rem;
+  color: var(--text-muted);
 }
 
-.dropzone.active {
+.dropzone.drag-over {
+  border: 2px dashed var(--color-accent);
   background: var(--stripe-color);
 }
 
+.dropzone.disabled {
+}
+
+.dropzone.file-uploaded {
+  color: hsl(120, 30%, 50%);
+  border-color: hsl(120, 70%, 70%);
+  background: hsl(120, 73%, 90%);
+  pointer-events: none;
+}
+
 .dropzone-file {
-  display: flex;
-  flex-direction: column;
-  /* background-color: #065 dd8; */
-  justify-content: center;
-  align-items: center;
   height: 100%;
   width: 100%;
   cursor: pointer;
@@ -49,21 +60,14 @@ input[type="file"] {
 .dropzone-label {
   padding: 0.5rem 0.5rem;
   font-size: small;
-  color: var(--text-muted);
   font-weight: 500;
   text-align: center;
 }
 
 .dropzone-label-emphasis {
   font-weight: 700;
-  color: var(--text-muted);
-}
-
-.dropzone-supported-file-types {
-  font-size: small;
-  color: var(--text-muted);
-  font-weight: 500;
-  text-align: center;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
 }
 
 .flex-line {
@@ -560,5 +564,12 @@ input::placeholder {
   width: 20px;
   margin-right: 0.25rem;
   height: 20px;
+  font-weight: 800;
+}
+
+.big-icon {
+  width: 30px;
+  margin-right: 0.25rem;
+  height: 30px;
   font-weight: 800;
 }
