--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,4 +1,5 @@
-input {
+.input,
+.textarea {
   position: relative;
   display: flex;
   border-radius: 3px;
@@ -12,21 +13,33 @@ input {
   transition: all 0.1s ease 0s;
 }
 
-input:disabled {
+.textarea {
+  display: flex;
+  width: 100%;
+  min-width: 100vh;
+  min-height: 100px;
+  resize: both;
+}
+
+.input:disabled,
+textarea:disabled {
   opacity: 0.5;
   cursor: not-allowed;
 }
 
-input:focus {
+.input:focus,
+textarea:focus {
   outline: none;
 }
 
-input:focus-within + .input-decoration {
+.input:focus-within,
+textarea:focus-within + .input-decoration {
   opacity: 1;
   transform: scaleX(1);
 }
 
-input::placeholder {
+.input::placeholder,
+textarea::placeholder {
   color: var(--color-placeholder);
 }
 
