--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -4,21 +4,14 @@
   display: flex;
   border-radius: 3px;
   padding: 12px 16px;
-  width: auto;
+  /* fit content */
+  width: clamp(100px, fit-content, 100%);
   caret-color: var(--color-accent);
   background-color: var(--color-background-input);
   outline: currentcolor none medium;
   border: 0px none;
   color: rgb(30, 37, 50);
   transition: all 0.1s ease 0s;
-}
-
-.textarea {
-  display: flex;
-  width: 100%;
-  min-width: 100vh;
-  min-height: 100px;
-  resize: both;
 }
 
 input:disabled,
