--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,8 +1,16 @@
 .heading-0 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 400;
   letter-spacing: -0.08em;
   color: #334;
+  /* position: sticky; */
+  z-index: 1;
+  /* padding: 0px !important; */
+  margin: 0px !important;
+  top: 0;
+  background: white;
+  /* border-bottom: 1px solid #d3d3d3; */
+  padding: 1rem;
 }
 .heading-1 {
   font-size: 2.5rem;
