--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -2,16 +2,23 @@
 .textarea {
   position: relative;
   display: flex;
-  border-radius: 3px;
-  padding: 12px 16px;
+  border-radius: 0.25rem;
+  padding: 0.75rem 1rem;
   /* fit content */
   width: clamp(100px, fit-content, 100%);
-  caret-color: var(--color-accent);
+  caret-color: var(--accent);
   background-color: var(--color-background-input);
   outline: currentcolor none medium;
   border: 0px none;
   color: rgb(30, 37, 50);
   transition: all 0.1s ease 0s;
+}
+
+.textarea-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 input:disabled,
@@ -25,12 +32,12 @@ textarea:focus {
   outline: none;
 }
 
-input:focus-within + .input-decoration {
+input:focus-within + .form-decoration {
   opacity: 1;
   transform: scaleX(1);
 }
 
-textarea:focus-within + .input-decoration {
+textarea:focus-within + .form-decoration {
   opacity: 1;
   transform: scaleX(1);
 }
@@ -41,14 +48,14 @@ textarea::placeholder {
   color: var(--color-placeholder);
 }
 
-.input-decoration {
+.form-decoration {
   position: absolute;
   bottom: 0px;
   left: 0px;
   right: 0px;
   width: 100%;
   height: 2px;
-  background-color: var(--color-accent);
+  background-color: var(--accent);
   border-radius: 0px 0px 2px 2px;
   pointer-events: none;
   opacity: 0;
@@ -60,4 +67,20 @@ textarea::placeholder {
   position: relative;
   width: fit-content;
   overflow: hidden;
+}
+
+.file-upload-filename {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--color-primary);
+  color: var(--accent);
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+  font-size: 1rem;
+  width: fit-content;
+  font-weight: 500;
+  cursor: pointer;
 }
