--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,7 +1,6 @@
 .main {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* grid-gap: 1rem; */
   background-color: #f5f5f5d6;
   overflow-y: hidden;
 }
@@ -25,6 +24,8 @@
 }
 
 .preview-container {
+  display: none;
+  visibility: hid;
   position: fixed;
   top: 0px;
   bottom: 0px;
@@ -71,14 +72,14 @@
 
 .auto-grid {
   display: grid;
-  /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
-  /* grid-gap: 1rem; */
-  /* background-color: white; */
-  /* padding: 1rem; */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 0.5rem;
 }
 
+.container-bordered,
 .collapse-container {
   display: flex;
+  background-color: white;
   flex-direction: column;
   border: 1px solid var(--border-color);
   padding: 0.5rem 1rem;
@@ -95,18 +96,58 @@
   justify-content: space-between;
   width: 100%;
   padding: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
   color: rgb(60, 82, 132);
 }
 
-.collapse-subheader {
+.collapse-content {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
+  position: relative;
+
+  flex-direction: column;
   padding: 0.5rem;
   font-size: 1rem;
-  font-weight: 600;
-  color: rgb(60, 82, 132);
+  font-weight: 400;
+  color: #222;
+}
+
+.container-delete {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.container-delete > .icon {
+  color: var(--muted);
+  cursor: pointer;
+}
+
+.container-delete > .icon:hover {
+  color: red;
+  border-radius: 0.5rem;
+  background-color: rgba(255, 0, 0, 0.1);
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.flex-auto {
+  display: flex;
+  flex: 1 1 auto;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+/* responsive grid layout  */
+.grid-two-columns {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(250px, 1fr));
+  grid-gap: 0.3rem;
+  padding: 2rem 1rem;
 }
