--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -3,13 +3,7 @@
   font-weight: 400;
   letter-spacing: -0.08em;
   color: #334;
-  /* position: sticky; */
-  z-index: 1;
-  /* padding: 0px !important; */
   margin: 0px !important;
-  top: 0;
-  background: white;
-  /* border-bottom: 1px solid #d3d3d3; */
   padding: 1rem;
 }
 .heading-1 {
@@ -17,8 +11,6 @@
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: -0.04em;
-
-  margin-bottom: 1.5rem;
   margin-top: 0;
 }
 
@@ -27,8 +19,6 @@
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: -0.04em;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
 }
 
 .heading-3 {
@@ -36,9 +26,6 @@
   font-weight: 700;
   line-height: 1.2;
   letter-spacing: -0.04em;
-
-  margin-bottom: 1.5rem;
-  margin-top: 0;
 }
 
 .label {
@@ -47,17 +34,37 @@
   line-height: 20px;
   color: var(--label-color);
   margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+}
+
+.add-new-entry {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 0.25rem;
+  color: var(--muted);
+  background-color: rgba(0, 0, 0, 0.01);
+  border-radius: 0.25rem;
+  font-size: small;
+  padding: 0.75rem 1rem;
+
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.add-new-entry:hover {
+  color: white;
+  background-color: var(--color-preview-background);
 }
 
 .link {
-  color: dodgerblue;
+  color: var(--accent);
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 600;
+  height: 24px;
+  width: 24px;
   transition: color 0.2s ease-in-out;
   cursor: pointer;
 }
-.link:hover {
-  color: #1a73e8;
+/* .link:hover {
   text-decoration: underline;
-}
+  background-color: var(--accent);
+} */
