--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -4,8 +4,8 @@
   display: flex;
   border-radius: 0.25rem;
   padding: 0.75rem 1rem;
-  /* fit content */
   width: clamp(100px, fit-content, 100%);
+  height: 100%;
   caret-color: var(--accent);
   background-color: var(--color-background-input);
   outline: currentcolor none medium;
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
 }
 
 input:disabled,
