--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   background-color: #f5f5f5d6;
+  gap: 0.8rem;
   overflow-y: hidden;
 }
 
@@ -14,7 +15,7 @@
 
 .scrollable-container-fade {
   /* background-image: linear-gradient(to top, rgb(242, 242, 242), rgba(0, 0, 0, 0)); */
-  background-image: linear-gradient(to top, rgba(60, 82, 132, 0.3), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(to top, rgba(60, 82, 132, 0.3), rgba(245, 245, 245, 0));
   position: sticky;
   bottom: 0;
   pointer-events: none;
@@ -52,16 +53,17 @@
 }
 
 .container {
-  padding: 2rem;
+  padding: 0rem 0.75rem;
+  margin: 0 auto;
   border-radius: 0.25rem;
-  margin: 1rem 0;
+  /* margin: 1rem 0; */
   /* background-color: white; */
   /* border: 1px solid var(--border-color); */
   /* box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1); */
 }
 
 .main-content {
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 
 .progress-bar {
@@ -70,13 +72,12 @@
   border-radius: 0.5rem;
 }
 
-.auto-grid {
+.grid-auto {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 0.5rem;
 }
 
-.container-bordered,
 .collapse-container {
   display: flex;
   background-color: white;
@@ -138,16 +139,30 @@
 
 .flex-auto {
   display: flex;
-  flex: 1 1 auto;
+  flex: 1 1 0%;
   align-items: center;
   flex-wrap: wrap;
+  gap: 0.5rem;
   justify-content: space-between;
+}
+
+.container-bordered {
+  border: 1px solid var(--border-color);
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  width: 100%;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+  border-radius: 0.5rem;
+  user-select: none;
 }
 
 /* responsive grid layout  */
 .grid-two-columns {
   display: grid;
-  grid-template-columns: repeat(2, minmax(250px, 1fr));
-  grid-gap: 0.3rem;
+  grid-template-columns: repeat(2, minmax(auto, 1fr));
+  grid-gap: 0.5rem;
   padding: 2rem 1rem;
 }
