--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,10 +1,8 @@
 .heading-0 {
-  font-size: 2rem;
-  font-weight: 400;
-  letter-spacing: -0.08em;
+  font-weight: 600;
   color: #334;
-  margin: 0px !important;
-  padding: 1rem;
+  text-transform: uppercase;
+  text-align: center;
 }
 .heading-1 {
   font-size: 2.5rem;
@@ -29,19 +27,20 @@
 }
 
 .label {
+  font-size: small;
   display: flex;
-  font-size: 16px;
-  line-height: 20px;
+  flex-direction: row;
+  width: fit-content;
+  width: auto;
   color: var(--label-color);
-  margin-top: 0.5rem;
 }
 
 .add-new-entry {
   display: inline-flex;
   align-items: center;
   margin-right: 0.25rem;
-  color: var(--muted);
-  background-color: rgba(0, 0, 0, 0.01);
+  color: whitesmoke;
+  background-color: var(--accent-dark);
   border-radius: 0.25rem;
   font-size: small;
   padding: 0.75rem 1rem;
@@ -52,19 +51,5 @@
 
 .add-new-entry:hover {
   color: white;
-  background-color: var(--color-preview-background);
+  background-color: var(--secondary);
 }
-
-.link {
-  color: var(--accent);
-  text-decoration: none;
-  font-weight: 600;
-  height: 24px;
-  width: 24px;
-  transition: color 0.2s ease-in-out;
-  cursor: pointer;
-}
-/* .link:hover {
-  text-decoration: underline;
-  background-color: var(--accent);
-} */
