--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,7 +1,7 @@
 .main {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  background-color: #f5f5f5d6;
+  /* background-color: #f5f5f5d6; */
   gap: 0.8rem;
   overflow-y: hidden;
 }
@@ -80,7 +80,7 @@
 
 .collapse-container {
   display: flex;
-  background-color: white;
+  /* background-color: white; */
   flex-direction: column;
   border: 1px solid var(--border-color);
   padding: 0.5rem 1rem;
