--- a/src/styles/template.css
+++ b/src/styles/template.css
@@ -3,9 +3,33 @@
   height: 9.25in;
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain;
   background-color: white;
   overflow: auto;
   padding: 1rem;
+  overflow-y: auto;
   border-radius: 0.5rem;
+  font-size: small;
+}
+
+.preview-body {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #333;
+}
+
+.preview-profile {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.preview-address {
+  font-size: 0.8rem;
+  display: flex;
+  /* justify-content: flex-end; */
+  flex-direction: column;
+  color: #555;
 }
