--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,7 @@
 /* Variables */
 :root {
-  --secondary: rgb(25, 25, 112);
+  --white: #fff;
+  --secondary: rgb(60, 82, 132);
   --color-navigation: rgb(249, 250, 251);
   --color-background: rgb(101, 110, 131);
   --accent: rgb(60, 82, 132);
@@ -23,7 +24,7 @@
 @import url("./buttons.css");
 @import url("./media-queries.css");
 @import url("./typography.css");
-
+@import url("./print.css");
 @import url("./template.css");
 @import url("./symbols.css");
 
@@ -36,6 +37,11 @@
   -webkit-font-smoothing: antialiased;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
+}
+
+body {
+  background-color: var(--secondary);
+  overflow-y: hidden;
 }
 
 .hidden {
