--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -4,6 +4,8 @@
   display: flex;
   border-radius: 0.25rem;
   padding: 0.75rem 1rem;
+  width: clamp(100px, -webkit-fit-content, 100%);
+  width: clamp(100px, -moz-fit-content, 100%);
   width: clamp(100px, fit-content, 100%);
   height: 100%;
   caret-color: var(--accent);
@@ -43,6 +45,30 @@ textarea:focus-within + .form-decoration {
   transform: scaleX(1);
 }
 
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
 input::placeholder,
 textarea::placeholder {
   font-size: small;
@@ -66,6 +92,8 @@ textarea::placeholder {
 
 .input-container {
   position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   overflow: hidden;
 }
@@ -81,36 +109,18 @@ textarea::placeholder {
   padding: 0.5rem 1rem;
   margin: 0.5rem;
   font-size: 1rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   font-weight: 500;
   cursor: pointer;
 }
-/* 
-clear formats for transparent-input classname
- */
 
-.transparent-input {
-  background-color: transparent;
-  border: none;
-  outline: none;
-  box-shadow: none;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  font-size: 1rem;
-  font-weight: 500;
-  color: var(--color-text);
-}
-
-.icon-on-hover-parent {
-  height: 24px;
-  width: 24px;
-  display: none;
-  visibility: hidden;
-}
-
-#on-hover:hover > .icon-on-hover-parent {
-  display: block;
-  visibility: visible;
+.inline-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  width: fit-content;
+  user-select: none;
 }
