--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,6 +1,7 @@
 .main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(768px, 1fr));
+  grid-auto-flow: column;
   gap: 0.8rem;
   overflow-y: hidden;
 }
