--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -2,20 +2,19 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(768px, 1fr));
   grid-auto-flow: column;
-  gap: 0.8rem;
+  gap: 1rem;
   overflow-y: hidden;
 }
 
 .scrollable-container {
   overflow-y: scroll;
-  background-color: var(--white);
+  /* background-color: var(--white); */
   overflow-x: hidden;
   height: 100vh;
   max-height: 100vh;
 }
 
 .scrollable-container-fade {
-  /* background-image: linear-gradient(to top, rgb(242, 242, 242), rgba(0, 0, 0, 0)); */
   background-image: linear-gradient(to top, rgba(60, 82, 132, 0.3), rgba(245, 245, 245, 0));
   position: sticky;
   bottom: 0;
@@ -61,7 +60,7 @@
   justify-content: space-between;
   width: 100%;
   padding: 0.5rem;
-  font-size: 1.2rem;
+  font-size: large;
   font-weight: 600;
   color: rgb(60, 82, 132);
 }
@@ -72,7 +71,7 @@
 
   flex-direction: column;
   padding: 0.5rem;
-  font-size: 1rem;
+  font-size: medium;
   font-weight: 400;
   color: #222;
 }
