Added drawer (to preview on mobile viewports)

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,6 +22,7 @@
 @import url("./template.css");
 @import url("./symbols.css");
 @import url("./progress.css");
+@import url("./drawer.css");
 
 /* Global styles */
 
