--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,16 +1,18 @@
 .main {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(768px, 1fr));
-  grid-auto-flow: column;
-  gap: 1rem;
+
+  grid-template-columns: auto;
+
+  grid-auto-flow: column dense;
   overflow-y: hidden;
 }
 
 .scrollable-container {
   overflow-y: scroll;
-  /* background-color: var(--white); */
-  overflow-x: hidden;
   height: 100vh;
+  /* min-width: 768px; */
+  width: auto;
+  /* flex-shrink: 1; */
   max-height: 100vh;
 }
 
