--- a/src/styles/template.css
+++ b/src/styles/template.css
@@ -1,23 +1,28 @@
 .preview-container {
+  position: relative;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-flow: column nowrap;
   background-color: var(--primary);
   user-select: none;
+  height: 100vh;
 }
 
 .din-A4 {
-  width: 21cm;
-  height: 29.7cm;
+  width: clamp(calc(210mm / 2), 210mm, 210mm); /* 21cm */
+  height: clamp(calc(297mm / 4), 297mm, 297mm); /* 21cm */
+  max-height: 100vh;
+  max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
-  transform: scale(0.75);
+  transform: scale(clamp(0.75, 0.85, 0.9));
+  transform-origin: top left;
   background-color: var(--white);
   border: 1px solid var(--white);
   overflow: auto;
-  /* box-shadow: var(--shadow); */
-  /* border-radius: 0.5rem; */
   font-size: 0.8rem;
 }
 
