--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -69,6 +69,54 @@ textarea::-ms-input-placeholder {
   color: var(--color-placeholder);
 }
 
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
+input::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
+  font-size: small;
+  color: var(--color-placeholder);
+}
+
 input::placeholder,
 textarea::placeholder {
   font-size: small;
@@ -98,29 +146,45 @@ textarea::placeholder {
   overflow: hidden;
 }
 
-.file-upload-filename {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: var(--color-primary);
-  color: var(--accent);
-  border: none;
-  border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
-  margin: 0.5rem;
-  font-size: 1rem;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  font-weight: 500;
+.input-file {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
   cursor: pointer;
 }
 
-.inline-container {
-  display: flex;
-  flex-direction: row;
+.input-avatar {
+  display: inline-flex;
+  overflow: hidden;
   align-items: center;
-  justify-content: flex-start;
-  width: fit-content;
-  user-select: none;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.5rem;
+  object-fit: cover;
+  cursor: pointer;
+  background-color: var(--color-background-input);
+}
+
+.image {
+  display: inline-flex;
+  overflow: hidden;
+  width: auto;
+  object-fit: cover;
+}
+
+.initials {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--color-text);
 }
