--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,8 +1,6 @@
 .main {
   display: grid;
-
-  grid-template-columns: auto;
-
+  grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
   grid-auto-flow: column dense;
   overflow-y: hidden;
 }
@@ -18,6 +16,7 @@
 
 .scrollable-container-fade {
   background-image: linear-gradient(to top, rgba(60, 82, 132, 0.3), rgba(245, 245, 245, 0));
+  position: -webkit-sticky;
   position: sticky;
   bottom: 0;
   pointer-events: none;
@@ -28,7 +27,6 @@
 
 .container {
   padding: 0rem 0.75rem;
-
   margin: 1rem 0;
 }
 
@@ -47,12 +45,15 @@
 .collapse-container {
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--shadow);
   padding: 0.5rem 1rem;
   width: 100%;
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
   border-radius: 0.5rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -113,7 +114,7 @@
 }
 
 .container-bordered {
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--shadow);
   border-radius: 0.5rem;
   padding: 0.5rem;
   background-color: var(--white);
@@ -122,17 +123,8 @@
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
   border-radius: 0.5rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
-}
-
-/* responsive grid layout  */
-.grid-two-columns {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(auto, 1fr));
-  grid-gap: 0.5rem;
-  padding: 2rem 1rem;
-}
-
-canvas {
-  border-radius: 0.5rem;
 }
