--- a/src/styles/template.css
+++ b/src/styles/template.css
@@ -6,22 +6,23 @@
   align-items: center;
   justify-content: center;
   flex-flow: column nowrap;
-  background-color: var(--primary);
+  background-color: var(--color-background);
   user-select: none;
   height: 100vh;
 }
 
 .din-A4 {
-  width: clamp(calc(210mm / 2), 210mm, 210mm); /* 21cm */
-  height: clamp(calc(297mm / 4), 297mm, 297mm); /* 21cm */
-  max-height: 100vh;
-  max-width: 100vw;
+  width: 210mm;
+  height: 297mm;
+  max-height: 100%;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  transform: scale(clamp(0.75, 0.85, 0.9));
-  transform-origin: top left;
+  transform: scale(clamp(0.5, 0.75, 1));
+  transform-origin: center;
   background-color: var(--white);
-  border: 1px solid var(--white);
+  /* border: 2px solid var(--white); */
+  border-radius: 0.25rem;
   overflow: auto;
   font-size: 0.8rem;
 }
@@ -60,7 +61,7 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
-  background-color: var(--accent-dark);
+  background-color: var(--secondary);
   padding: 0.5rem 1rem;
   color: var(--white);
   justify-content: space-between;
