--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,11 +2,9 @@
 :root {
   --white: #fff;
   --primary: rgb(60, 82, 132);
-  --accent: rgb(60, 82, 132);
   --secondary: rgb(48, 65, 105);
-  --color-background-input: rgb(239, 242, 249);
+  --background-input: rgb(239, 242, 249);
   --color-placeholder: rgb(159, 166, 187);
-  --accent: rgb(78, 118, 192);
   --shadow: rgba(0, 0, 0, 0.15);
   --muted: rgb(107, 114, 128);
   --label-color: rgb(130, 139, 162);
