--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -8,8 +8,8 @@
   width: clamp(100px, -moz-fit-content, 100%);
   width: clamp(100px, fit-content, 100%);
   height: 100%;
-  caret-color: var(--accent);
-  background-color: var(--color-background-input);
+  caret-color: var(--primary);
+  background-color: var(--background-input);
   outline: currentcolor none medium;
   border: 0px none;
   color: rgb(30, 37, 50);
@@ -130,7 +130,7 @@ textarea::placeholder {
   right: 0px;
   width: 100%;
   height: 2px;
-  background-color: var(--accent);
+  background-color: var(--primary);
   border-radius: 0px 0px 2px 2px;
   pointer-events: none;
   opacity: 0;
@@ -168,7 +168,7 @@ textarea::placeholder {
   border-radius: 0.5rem;
   object-fit: cover;
   cursor: pointer;
-  background-color: var(--color-background-input);
+  background-color: var(--background-input);
 }
 
 .image {
