Need to fix more things

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,6 +20,15 @@
 @import url("./progress.css");
 @import url("./drawer.css");
 
+/* Media queries */
+
+@media screen and (max-width: 768px) {
+  .main {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+}
+
 /* Global styles */
 
 *,
