--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -8,6 +8,7 @@
   width: clamp(100px, -moz-fit-content, 100%);
   width: clamp(100px, fit-content, 100%);
   height: 100%;
+  line-height: normal;
   caret-color: var(--primary);
   background-color: var(--background-input);
   outline: currentcolor none medium;
@@ -146,7 +147,7 @@ textarea::placeholder {
   overflow: hidden;
 }
 
-.input-file {
+.hide-input-file {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -163,8 +164,8 @@ textarea::placeholder {
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  width: 3rem;
-  height: 3rem;
+  width: 2.81rem;
+  height: 2.81rem;
   border-radius: 0.5rem;
   object-fit: cover;
   cursor: pointer;
@@ -178,13 +179,12 @@ textarea::placeholder {
   object-fit: cover;
 }
 
-.initials {
+.placeholder {
   display: inline-flex;
+  overflow: hidden;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  font-size: 1.5rem;
-  font-weight: 500;
-  color: var(--color-text);
+  object-fit: cover;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.3);
 }
