--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -14,8 +14,8 @@ button {
   padding-right: 1.25rem;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
-  background-color: var(--background-input);
-  color: #111827;
+  background: var(--tertiary);
+  color: var(--primary);
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
@@ -26,7 +26,7 @@ button {
 }
 
 .button:hover {
-  background-color: hsl(216, 70%, 52%);
+  background-color: var(--primary);
   color: #fff;
 }
 
