--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,16 +1,34 @@
 /* Variables */
 :root {
   --white: #fff;
-  --primary: rgb(60, 82, 132);
+  --grey-100: #fcfcfe;
+  --grey-200: #f9fafd;
+  --grey-300: #f5f7fb;
+  --grey-400: #f2f5fa;
+  --grey-500: #eff2f9;
+  --grey-600: #bfc2c7;
+  --grey-700: #8f9195;
+  --grey-800: #606164;
+  --grey-900: #303032;
+  --primary: #3c5284;
+  --primary-100: #d8dce6;
+  --primary-200: #b1bace;
+  --primary-300: #8a97b5;
+  --primary-400: #63759d;
+  --primary-500: #3c5284;
+  --primary-600: #30426a;
+  --primary-700: #24314f;
+  --primary-800: #182135;
+  --primary-900: #0c101a;
   --secondary: rgb(48, 65, 105);
   --terciary: rgb(60, 82, 132);
   --paper-background: rgb(244, 244, 244);
-  --background-input: rgb(239, 242, 249);
+  --background-input: #eff2f9;
   --color-placeholder: rgb(159, 166, 187);
   --shadow: rgba(0, 0, 0, 0.15);
   --muted: rgb(107, 114, 128);
   --label-color: rgb(130, 139, 162);
-  --gradient-primary: linear-gradient(90deg, var(--primary) 0%, var(--secondary), 98%, var(--terciary) 100%);
+  --gradient-primary: linear-gradient(90deg, var(--primary-200) 0%, var(--primary-500), 50%, var(--primary-700), 100%);
   --gradient-progress: linear-gradient(120deg, rgb(0, 188, 212), rgb(103, 58, 183));
 }
 
@@ -20,6 +38,7 @@
 @import url("./buttons.css");
 @import url("./print.css");
 @import url("./drawer.css");
+@import url("./snippets.css");
 
 /* Global styles */
 
@@ -42,33 +61,22 @@ ul {
   margin: 0;
 }
 
-.hidden {
-  display: none;
-  visibility: hidden;
-}
-
-.show {
-  display: block;
-}
-
 .App {
-  display: grid;
-  grid-template-columns: 2fr 3fr;
+  background: #e8eaf0;
 }
-
 /* Progress */
 
 .progress {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: var(--color-placeholder);
+  background-color: var(--background-input);
   border-radius: 8px;
   height: 10px;
 }
 
 .progress .bar {
-  background: var(--gradient-progress);
+  background: var(--primary);
   border-radius: 8px;
   height: 10px;
 }
@@ -103,24 +111,6 @@ ul {
   width: fit-content;
   width: auto;
   color: var(--label-color);
-}
-
-.add-new-entry {
-  display: inline-flex;
-  align-items: center;
-  margin-right: 0.25rem;
-  color: var(--white);
-  background-color: var(--secondary);
-  border-radius: 0.25rem;
-  font-size: small;
-  padding: 0.5rem 0.75rem;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-
-.add-new-entry:hover {
-  color: var(--white);
-  background-color: var(--secondary);
 }
 
 .text-muted {
