--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -9,8 +9,7 @@
   width: clamp(100px, fit-content, 100%);
   height: 100%;
   line-height: normal;
-  caret-color: var(--primary);
-  background-color: var(--background-input);
+  background-color: var(--grey-500, --white);
   outline: currentcolor none medium;
   border: 0px none;
   color: rgb(30, 37, 50);
@@ -23,6 +22,20 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+}
+
+.range {
+  accent-color: var(--primary);
+}
+
+.range::-webkit-slider-thumb {
+  appearance: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  background-color: var(--primary);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
 input:disabled,
@@ -131,7 +144,7 @@ textarea::placeholder {
   right: 0px;
   width: 100%;
   height: 2px;
-  background-color: var(--primary);
+  background-color: var(--primary-300);
   border-radius: 0px 0px 2px 2px;
   pointer-events: none;
   opacity: 0;
